--- a/css/component/card-news.css
+++ b/css/component/card-news.css
@@ -7,7 +7,7 @@
   background: #fff;
   overflow: hidden;
 }
-.c-card-news__figure {
+.c-card-news__pic-box {
   position: relative;
   max-width: 100%;
   line-height: 0;
