--- a/css/component/card-review.css
+++ b/css/component/card-review.css
@@ -12,7 +12,7 @@
   display: flex;
   margin-bottom: 25px;
 }
-.c-card-review__figure {
+.c-card-review__pic-box {
   flex: 0 0 139px;
   height: 139px;
   border-radius: 50%;
