--- a/css/component/card-offer.css
+++ b/css/component/card-offer.css
@@ -6,14 +6,14 @@
   overflow: hidden;
   background: #fff;
 }
-.c-card-offer__figure {
+.c-card-offer__pic-box {
   position: relative;
   max-width: 100%;
   max-height: 142px;
   overflow: hidden;
   line-height: 0;
 }
-.c-card-offer__figure::before {
+.c-card-offer__pic-box::before {
   content: "";
   position: absolute;
   width: 100%;
