--- a/css/component/form.css
+++ b/css/component/form.css
@@ -19,25 +19,32 @@
 .c-form__link {
   flex-basis: calc(100% / 2 - 15px);
   height: 63px;
-  border: none;
+  border: 2px solid #fff;
   border-radius: 4px;
   box-sizing: border-box;
-  padding: 0 30px;
+  padding: 0 27px;
   background: #fff;
   font-size: 18px;
   line-height: 1;
 }
 .c-form__textarea {
   height: 232px;
-  border: none;
+  border: 2px solid #fff;
   border-radius: 4px;
   box-sizing: border-box;
   margin-bottom: 28px;
-  padding: 28px;
+  padding: 26px;
   background: #fff;
   font-size: 18px;
   resize: none;
 }
+.c-form__name:focus,
+.c-form__link:focus,
+.c-form__textarea:focus {
+  border: 2px solid #e7e7e7;
+  outline: none;
+}
+
 .c-form__tags {
   display: flex;
   margin-bottom: 24px;
@@ -53,25 +60,30 @@
   flex-wrap: wrap;
 }
 .c-form__item {
-  margin: 0 6px 9px 7px;
+  margin: 0 6px 9px 5px;
 }
 .c-form__label {
   display: inline-block;
   border-radius: 17px;
+  border: 1px solid #e7e7e7;
   box-sizing: border-box;
-  padding: 11px 15px;
+  padding: 10px 15px;
   background: #e7e7e7;
   font-size: 13px;
   line-height: 1;
-  transition: background .5s ease-out;
+  transition: background .5s ease-out, border .5s ease-out;
   cursor: pointer;
 }
-.c-form__checkbox {
+.c-form__label:hover {
+  border: 1px solid #c8c8c8;
+  transition: background .5s ease-out, border .5s ease-out;
+}
+.c-form__radio {
   display: none;
 }
-.c-form__checkbox:checked + .c-form__label {
+.c-form__radio:checked + .c-form__label {
   background: #b9eae4;
-  transition: background .5s ease-out;
+  transition: background .5s ease-out, border .5s ease-out;
 }
 .c-form__button {
   display: flex;
@@ -101,4 +113,8 @@
 .c-form__reset:hover {
   background: #8e8e8e;
   transition: background .5s ease-out;
+}
+.c-form__reset:focus,
+.c-form__submit:focus {
+  outline: none;
 }
