--- a/css/component/tooltip.css
+++ b/css/component/tooltip.css
@@ -21,17 +21,32 @@
   line-height: 1.6;
   text-align: left;
   color: #17191a;
-  transition: visibility .5s ease-out;
+  opacity: 0;
+  transition: opacity .3s ease-out;
+}
+.c-tooltip__body::after {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  right: 0;
+  display: block;
+  width: 100%;
+  height: 10px;
 }
 .c-tooltip__body::before {
   content: "";
-  display: block;
   position: absolute;
-  top: -20px;
+  top: -9px;
   right: 45px;
+  display: block;
   border: 11px solid transparent;
+  border-top-width: 0;
   border-bottom: 9px solid #d6dada;
 }
-.c-tooltip__title:hover + .c-tooltip__body {
+.c-tooltip:hover > .c-tooltip__body {
   visibility: visible;
+  top: 26px;
+  right: 0px;
+  opacity: 1;
+  transition: opacity .3s ease-out;
 }
