добавил стили для секции формы

--- a/course_2/scss/base/_variables.scss
+++ b/course_2/scss/base/_variables.scss
@@ -18,6 +18,7 @@ $text-color-black: #000;
 $text-color-white: #fff;
 
 $text-color-secondary: #666;
+$text-color-form: #f8faf9;
 
 $base-color-third: #999;
 
@@ -42,4 +43,4 @@ $bg-color-red: #303030;
 $bg-color-red: #151515;
 
 $bg-color-red: #efefef;
-$bg-color-red: #f8faf9;
+
