--- a/course_2/css/main.css
+++ b/course_2/css/main.css
@@ -124,7 +124,7 @@ address {
   text-transform: uppercase; }
 
 .advantages__subtitle {
-  margin-bottom: 37px;
+  margin-bottom: 57px;
   max-width: 575px;
   font-size: 1.125em;
   line-height: 1.2;
@@ -138,17 +138,77 @@ address {
 
 .advantages__item {
   position: relative;
-  flex-basis: calc(100% / 3); }
+  flex-basis: calc(100% / 3 - 9px); }
+  .advantages__item:not(:nth-child(3n)):not(:last-child) {
+    margin-right: 13px; }
   .advantages__item:not(:nth-child(3n)):not(:last-child)::after {
     content: "";
     position: absolute;
-    top: 50%;
+    top: 22%;
     left: 100%;
     display: block;
     width: 67px;
     height: 21px;
     background: url(../img/bg/break.png);
     transform: translate(-50%, -50%); }
+
+/*-------------------- layout reviews --------------------*/
+.reviews {
+  height: 100vh;
+  background: #f5f5f5; }
+
+.reviews__title {
+  margin-bottom: 11px;
+  font-size: 3em;
+  font-weight: bold;
+  line-height: 1.2;
+  text-transform: uppercase; }
+
+/*-------------------- layout form --------------------*/
+.form {
+  height: 100vh;
+  background: #161616 url(../img/bg/form.jpg) no-repeat center center/contain;
+  color: #fff; }
+
+.form__title {
+  margin-bottom: 11px;
+  font-size: 3em;
+  font-weight: bold;
+  line-height: 1.2;
+  text-align: center;
+  text-transform: uppercase; }
+
+.form__container {
+  display: flex;
+  justify-content: space-between; }
+
+.form__group {
+  flex-basis: calc(50% - 10px);
+  display: flex;
+  flex-direction: column; }
+
+.form__row {
+  display: flex; }
+
+.form__title-label {
+  display: block;
+  font-size: 1.125em;
+  color: #f8faf9; }
+
+.form__label {
+  flex: 1 1 auto; }
+
+.form__label + .form__label {
+  margin-left: 20px; }
+
+.form__input {
+  width: 100%;
+  height: 58px; }
+
+.form__textarea {
+  width: 100%;
+  height: 180px;
+  resize: none; }
 
 .logo {
   display: block;
@@ -220,13 +280,24 @@ address {
 .advantage {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  text-align: center; }
 
 .advantage__imege-box {
   width: 125px;
   height: 125px;
   border-radius: 50%;
+  margin-bottom: 27px;
   padding: 32px;
   background: #f5f5f5; }
+
+.advantage__title {
+  margin-bottom: 13px;
+  font-size: 1.5em;
+  font-weight: bold; }
+
+.advantage__content p {
+  line-height: 1.2;
+  color: #666; }
 
 /*# sourceMappingURL=main.css.map */
