--- a/course_2/scss/block/_advantage.scss
+++ b/course_2/scss/block/_advantage.scss
@@ -3,11 +3,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 .advantage__imege-box {
   width: 125px;
   height: 125px;
   border-radius: 50%;
+  margin-bottom: 27px;
   padding: 32px;
   background: $base-color-primary;
+}
+.advantage__title {
+  margin-bottom: 13px;
+  font-size: 1.5em;
+  font-weight: bold;  
+}
+.advantage__content {
+  
+  & p {
+    line-height: 1.2;
+    color: $text-color-secondary;
+  }
 }
