--- a/course_2/scss/layout/_reviews.scss
+++ b/course_2/scss/layout/_reviews.scss
@@ -1,12 +1,16 @@
 /*-------------------- layout reviews --------------------*/
 .reviews {
   height: 100vh;
-  background: $base-color-primary;
+  padding-top: 55px;
 }
 .reviews__title {
-  margin-bottom: 11px;
+  margin-bottom: 32px;
   font-size: 3em;
   font-weight: bold;
   line-height: 1.2;
+  text-align: center;
   text-transform: uppercase;
+}
+.reviews__list {
+  margin-bottom: 22px;
 }
