--- a/course_2/scss/main.scss
+++ b/course_2/scss/main.scss
@@ -12,12 +12,12 @@
 @import 'layout/form';
 @import 'layout/map';
 @import 'layout/footer';
+@import 'layout/radio-menu';
 //-------------------- blocks --------------------
 @import 'block/logo';
 @import 'block/menu';
 @import 'block/contact';
 
-@import 'block/radio-menu';
 @import 'block/button';
 @import 'block/properties';
 
@@ -31,6 +31,7 @@
 
 @import 'block/carousel';
 @import 'block/review';
+@import 'block/users';
 
 @import 'block/social';
 //-------------------- decor --------------------
