--- a/course_2/css/main.css
+++ b/course_2/css/main.css
@@ -155,23 +155,28 @@ address {
 /*-------------------- layout reviews --------------------*/
 .reviews {
   height: 100vh;
-  background: #f5f5f5; }
+  padding-top: 55px; }
 
 .reviews__title {
-  margin-bottom: 11px;
+  margin-bottom: 32px;
   font-size: 3em;
   font-weight: bold;
   line-height: 1.2;
+  text-align: center;
   text-transform: uppercase; }
+
+.reviews__list {
+  margin-bottom: 22px; }
 
 /*-------------------- layout form --------------------*/
 .form {
   height: 100vh;
+  padding-top: 72px;
   background: #161616 url(../img/bg/form.jpg) no-repeat center center/contain;
   color: #fff; }
 
 .form__title {
-  margin-bottom: 11px;
+  margin-bottom: 43px;
   font-size: 3em;
   font-weight: bold;
   line-height: 1.2;
@@ -180,7 +185,8 @@ address {
 
 .form__container {
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  flex-wrap: wrap; }
 
 .form__group {
   flex-basis: calc(50% - 10px);
@@ -188,14 +194,17 @@ address {
   flex-direction: column; }
 
 .form__row {
-  display: flex; }
+  display: flex;
+  margin-bottom: 15px; }
 
 .form__title-label {
   display: block;
+  margin-bottom: 3px;
   font-size: 1.125em;
   color: #f8faf9; }
 
 .form__label {
+  position: relative;
   flex: 1 1 auto; }
 
 .form__label + .form__label {
@@ -203,12 +212,136 @@ address {
 
 .form__input {
   width: 100%;
-  height: 58px; }
+  height: 58px;
+  border: 2px solid #fff;
+  padding: 0 10px;
+  font-size: 18px; }
+  .form__input:focus {
+    border: 2px solid #e01f3d;
+    outline: none; }
 
 .form__textarea {
   width: 100%;
   height: 180px;
+  padding: 10px;
+  font-size: 18px;
   resize: none; }
+  .form__textarea:focus {
+    border: 2px solid #e01f3d;
+    outline: none; }
+
+.form__radio,
+.form__checkbox {
+  display: none; }
+
+.form__radio ~ .form__title-label {
+  padding-left: 35px; }
+  .form__radio ~ .form__title-label::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 100%;
+    transform: translate(19px, 6px);
+    display: none;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background: #e01f3d; }
+  .form__radio ~ .form__title-label::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #fff; }
+
+.form__radio:checked ~ .form__title-label::after {
+  display: inline-block; }
+
+.form__checkbox ~ .form__title-label {
+  padding-left: 35px; }
+  .form__checkbox ~ .form__title-label::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 100%;
+    transform: translate(19px, 6px);
+    display: none;
+    width: 13px;
+    height: 13px;
+    background: #e01f3d; }
+  .form__checkbox ~ .form__title-label::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    background: #fff; }
+
+.form__checkbox:checked ~ .form__title-label::after {
+  display: inline-block; }
+
+.form__reset {
+  text-align: right; }
+
+.form__row--wrap {
+  flex-wrap: wrap;
+  margin-bottom: 35px; }
+  .form__row--wrap .form__label {
+    flex: 1 1 50%;
+    margin-bottom: 7px; }
+  .form__row--wrap .form__label + .form__label {
+    margin-left: 0; }
+
+.form__row--button {
+  margin-bottom: 0; }
+
+.form__submit,
+.form__reset {
+  cursor: pointer; }
+  .form__submit:focus,
+  .form__reset:focus {
+    outline: none; }
+
+.form__reset {
+  margin-left: 16px;
+  border: none;
+  background: transparent;
+  font-size: 18px;
+  color: #999999; }
+
+.radio-menu {
+  position: fixed;
+  top: 242px;
+  right: 47px; }
+
+.radio-menu__item {
+  margin-bottom: 5px; }
+
+.radio-menu__link {
+  position: relative;
+  display: block;
+  width: 16px;
+  height: 16px;
+  border: 1px solid transparent;
+  border-radius: 50%; }
+  .radio-menu__link::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: #999; }
+  .radio-menu__link--activ {
+    border-color: #e42424; }
+  .radio-menu__link--activ::before {
+    background: #e42424; }
 
 .logo {
   display: block;
@@ -270,11 +403,14 @@ address {
 
 .properties__item {
   display: flex;
-  max-width: 155px; }
+  flex-basis: 155px; }
 
 .properties__image-box {
-  width: 44px;
+  flex: 1 0 44px;
   height: 44px; }
+
+.properties__description {
+  margin-left: 8px; }
 
 /*-------------------- block advantages --------------------*/
 .advantage {
@@ -299,5 +435,60 @@ address {
 .advantage__content p {
   line-height: 1.2;
   color: #666; }
+
+/*-------------------- block review --------------------*/
+.review {
+  position: relative;
+  display: flex;
+  padding: 51px 95px 34px 45px;
+  background: #f5f5f5;
+  overflow: hidden; }
+  .review::before {
+    content: "";
+    position: absolute;
+    top: -65px;
+    right: 50%;
+    transform: translate(50%, 0);
+    display: block;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    background: #fff; }
+
+.review__avatar-box {
+  flex: 1 0 254px;
+  height: 260px; }
+
+.review__content {
+  margin-left: 20px;
+  padding-top: 8px;
+  font-size: 18px; }
+  .review__content p {
+    margin-bottom: 27px;
+    line-height: 1.21;
+    color: #666; }
+
+.review__title {
+  margin-bottom: 24px;
+  font-size: 27px;
+  font-weight: bold; }
+
+.review__author-name {
+  font-size: 18px;
+  font-weight: bold; }
+
+/*-------------------- block users --------------------*/
+.reviews__user {
+  display: flex;
+  justify-content: center; }
+
+.users__item {
+  width: 80px;
+  height: 80px;
+  border: 6px solid transparent;
+  border-radius: 50%;
+  overflow: hidden; }
+  .users__item--activ {
+    border: 6px solid #e01f3d; }
 
 /*# sourceMappingURL=main.css.map */
