--- a/course_2/scss/layout/_form.scss
+++ b/course_2/scss/layout/_form.scss
@@ -1,11 +1,12 @@
 /*-------------------- layout form --------------------*/
 .form {
   height: 100vh;
+  padding-top: 72px;
   background: #161616 url(../img/bg/form.jpg) no-repeat center center/contain;
   color: $text-color-white;
 }
 .form__title {
-  margin-bottom: 11px;
+  margin-bottom: 43px;
   font-size: 3em;
   font-weight: bold;
   line-height: 1.2;
@@ -15,6 +16,7 @@
 .form__container {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .form__group {
   flex-basis: calc(50% - 10px);
@@ -23,13 +25,16 @@
 }
 .form__row {
   display: flex;
+  margin-bottom: 15px;
 }
 .form__title-label {
   display: block;
+  margin-bottom: 3px;
   font-size: 1.125em;
   color: $text-color-form;
 }
 .form__label {
+  position: relative;
   flex: 1 1 auto;
 }
 .form__label + .form__label {
@@ -38,71 +43,127 @@
 .form__input {
   width: 100%;
   height: 58px;
+  border: 2px solid #fff;
+  padding: 0 10px;
+  font-size: 18px;
+
+  &:focus {
+    border: 2px solid $base-color-secondary;
+    outline: none;
+  }
 }
 .form__textarea {
   width: 100%;
   height: 180px;
+  padding: 10px;
+  font-size: 18px;
   resize: none;
+
+  &:focus {
+    border: 2px solid $base-color-secondary;
+    outline: none;
+  }
 }
-// .form__name:focus,
-// .form__link:focus,
-// .form__textarea:focus {
-//   border: 2px solid #e7e7e7;
-//   outline: none;
-// }
-// .form__label {
-//   display: inline-block;
-//   border-radius: 17px;
-//   border: 1px solid #e7e7e7;
-//   box-sizing: border-box;
-//   padding: 10px 15px;
-//   background: #e7e7e7;
-//   font-size: 13px;
-//   line-height: 1;
-//   transition: background .5s ease-out, border .5s ease-out;
-//   cursor: pointer;
-// }
-// .form__label:hover {
-//   border: 1px solid #c8c8c8;
-//   transition: background .5s ease-out, border .5s ease-out;
-// }
-// .form__radio {
-//   display: none;
-// }
-// .form__radio:checked + .form__label {
-//   background: #b9eae4;
-//   transition: background .5s ease-out, border .5s ease-out;
-// }
-// .form__button {
-//   display: flex;
-//   justify-content: flex-end;
-// }
-// .form__reset,
-// .form__submit { 
-//   min-width: 165px; 
-//   border: none;
-//   border-radius: 26px;
-//   box-sizing: border-box;
-//   padding: 19px;
-//   text-align: center;
-//   font-weight: bold;
-//   color: #fff;
-//   text-transform: uppercase;
-//   cursor: pointer;
-// }
-// .form__reset {
-//   background: #2b2b2b;
-//   margin-right: 21px;
-//   transition: background .5s ease-out;
-// }
-// .form__submit {
-//   background: #f5170e;
-// }
-// .form__reset:hover {
-//   background: #8e8e8e;
-//   transition: background .5s ease-out;
-// }
-// .form__reset:focus,
-// .form__submit:focus {
-//   outline: none;
-// }
+.form__radio,
+.form__checkbox {
+  display: none;
+}
+.form__radio ~ .form__title-label {
+  padding-left: 35px;
+
+  &::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 100%;
+  transform: translate(19px, 6px);
+  display: none;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background: $base-color-secondary;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #fff;
+  }
+}
+.form__radio:checked ~ .form__title-label {
+  
+  &::after {
+    display: inline-block;
+    }
+}
+.form__checkbox ~ .form__title-label {
+  padding-left: 35px;
+
+  &::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 100%;
+  transform: translate(19px, 6px);
+  display: none;
+  width: 13px;
+  height: 13px;
+  background: $base-color-secondary;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    background: #fff;
+  }
+}
+.form__checkbox:checked ~ .form__title-label {
+  
+  &::after {
+    display: inline-block;
+    }
+}
+.form__reset {
+  text-align: right;
+}
+
+.form__row--wrap {
+  flex-wrap: wrap;
+  margin-bottom: 35px;
+
+  & .form__label {
+  flex: 1 1 50%;
+  margin-bottom: 7px;
+  }
+
+  & .form__label + .form__label {
+    margin-left: 0;
+  }
+}
+.form__row--button {
+  margin-bottom: 0;
+}
+.form__submit,
+.form__reset {
+  cursor: pointer;
+  
+  &:focus {
+    outline: none;
+  }
+}
+.form__reset {
+  margin-left: 16px;
+  border: none;
+  background: transparent;
+  font-size: 18px;
+  color: #999999;
+}
