--- a/course_2/scss/block/_review.scss
+++ b/course_2/scss/block/_review.scss
@@ -1,7 +1,6 @@
 /*-------------------- block review --------------------*/
 .review {
   position: relative;
-  display: flex;
   padding: 51px 95px 34px 45px ;
   background: $base-color-primary;
   overflow: hidden;
@@ -33,11 +32,12 @@
     line-height: 1.21;
     color: #666;
   }
-}
-.review__title {
-  margin-bottom: 24px;
-  font-size: 27px;
-  font-weight: bold;
+
+  & h3 {
+    margin-bottom: 24px;
+    font-size: 27px;
+    font-weight: bold;
+  }
 }
 .review__author-name {
   font-size: 18px;
