--- a/course_2/scss/layout/_hero.scss
+++ b/course_2/scss/layout/_hero.scss
@@ -2,18 +2,24 @@
 .hero {
   height: 100vh;
   background: $base-color-primary;
+
+  & .container {
+    position: relative;
+  }
 }
-.hero__container {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-}
+// .hero__container {
+//   display: flex;
+//   flex-direction: row-reverse;
+//   justify-content: space-between;
+//   align-items: center;
+// }
 .hero__image-box {
-  // flex: 1 0;
-  width: 500px;
-  height: 500px;
+  position: absolute;
+  top: 17.5%;
+  right: 1.6%;
+  max-width: 500px;
+  max-height: 500px;
   border-radius: 50%;
-  margin-left: -30px;
   padding: 10px;
   background: $text-color-white;
   overflow: hidden;
@@ -32,5 +38,5 @@
   font-size: 1.125em;
 }
 .hero__button {
-  margin-bottom: 90px;
+  margin-bottom: 92px;
 }
