--- a/course_2/scss/layout/_radio-menu.scss
+++ b/course_2/scss/layout/_radio-menu.scss
@@ -13,6 +13,7 @@
   height: 16px;
   border: 1px solid transparent;
   border-radius: 50%;
+  transition: .3s ease-out;
 
   &::before{
     content: "";
@@ -32,5 +33,15 @@
 
   &--activ::before {
     background: #e42424;
+  }
+
+  &:hover {
+    border-color: #e42424;
+    transition: .3s ease-out;
+  }
+
+  &:hover::before {
+    background: #e42424;
+    transition: .3s ease-out;
   }
 }
