Добавил оформление к секции map, начал переписывать переменные

--- a/course_2/scss/base/_base.scss
+++ b/course_2/scss/base/_base.scss
@@ -41,7 +41,7 @@ b {
 address {
   font-style: normal;
 }
-/*-------------------- base layout --------------------*/
+/*-------------------- layout base --------------------*/
 .wrapper {
   display: flex;
   flex-direction: column;
