--- a/course_2/css/main.css
+++ b/course_2/css/main.css
@@ -1,6 +1,7 @@
 /*-------------------- base --------------------*/
 html {
-  height: 100%; }
+  height: 100%;
+}
 
 body {
   height: 100%;
@@ -11,71 +12,88 @@ body {
   line-height: 1.42;
   color: #000;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; }
+  -moz-osx-font-smoothing: grayscale;
+}
 
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 ul, figure {
   margin: 0px;
-  padding: 0px; }
+  padding: 0px;
+}
 
 img {
-  width: 100%; }
+  width: 100%;
+}
 
 ul > li {
-  list-style-type: none; }
+  list-style-type: none;
+}
 
 a {
   text-decoration: none;
   cursor: pointer;
-  color: inherit; }
+  color: inherit;
+}
 
 h1, h2, h3, h4, h5, h6, p {
   margin: 0;
-  font-weight: normal; }
+  font-weight: normal;
+}
 
 b {
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 address {
-  font-style: normal; }
+  font-style: normal;
+}
 
-/*-------------------- base layout --------------------*/
+/*-------------------- layout base --------------------*/
 .wrapper {
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-height: 100%; }
+  min-height: 100%;
+}
 
 .container {
   max-width: 940px;
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 /*-------------------- layout header --------------------*/
 .header {
   display: flex;
   align-items: center;
   margin-bottom: 81px;
-  padding-top: 23px; }
+  padding-top: 23px;
+}
 
 .header__menu {
-  margin-left: 25px; }
+  margin-left: 25px;
+}
 
 .header__contact {
   flex-grow: 1;
-  text-align: right; }
+  text-align: right;
+}
 
 .btn-menu {
-  display: none; }
+  display: none;
+}
 
 /*-------------------- layout hero --------------------*/
 .hero {
   height: 100vh;
-  background: #f5f5f5; }
-  .hero .container {
-    position: relative;
-    height: 100%; }
+  background: #f5f5f5;
+}
+.hero .container {
+  position: relative;
+  height: 100%;
+}
 
 .hero__image-box {
   position: absolute;
@@ -86,13 +104,15 @@ address {
   border-radius: 50%;
   padding: 10px;
   background: #fff;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .hero__content {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 70%; }
+  height: 70%;
+}
 
 .hero__title {
   margin-bottom: 19px;
@@ -100,303 +120,64 @@ address {
   font-size: 3em;
   font-weight: bold;
   line-height: 1.2;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+}
 
 .hero__subtitle {
   margin-bottom: 37px;
   max-width: 325px;
-  font-size: 1.125em; }
+  font-size: 1.125em;
+}
 
 .hero__button {
-  margin-bottom: 92px; }
+  margin-bottom: 92px;
+}
 
 .hero__properties {
-  flex: 1 0; }
-
-/*-------------------- layout advantages --------------------*/
-.advantages {
-  height: 100vh;
-  background: #fff; }
-
-.advantages__container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 100px; }
-
-.advantages__title {
-  margin-bottom: 11px;
-  max-width: 580px;
-  font-size: 3em;
-  font-weight: bold;
-  line-height: 1.2;
-  text-transform: uppercase; }
-
-.advantages__subtitle {
-  margin-bottom: 57px;
-  max-width: 575px;
-  font-size: 1.125em;
-  line-height: 1.2;
-  text-align: center;
-  color: #666; }
-
-.advantages__list {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap; }
-
-.advantages__item {
-  position: relative;
-  flex-basis: calc(100% / 3 - 9px); }
-  .advantages__item:not(:nth-child(3n)):not(:last-child) {
-    margin-right: 13px; }
-  .advantages__item:not(:nth-child(3n)):not(:last-child)::after {
-    content: "";
-    position: absolute;
-    top: 22%;
-    left: 100%;
-    display: block;
-    width: 67px;
-    height: 21px;
-    background: url(../img/bg/break.png);
-    transform: translate(-50%, -50%); }
-
-/*-------------------- layout reviews --------------------*/
-.reviews {
-  height: 100vh;
-  padding-top: 55px; }
-
-.reviews__title {
-  margin-bottom: 32px;
-  font-size: 3em;
-  font-weight: bold;
-  line-height: 1.2;
-  text-align: center;
-  text-transform: uppercase; }
-
-.reviews__list {
-  margin-bottom: 22px; }
-
-.rewievs__item {
-  display: none; }
-  .rewievs__item--activ {
-    display: flex; }
-
-/*-------------------- layout form --------------------*/
-.form {
-  height: 100vh;
-  padding-top: 72px;
-  background: #161616 url(../img/bg/form.jpg) no-repeat center center/contain;
-  color: #fff; }
-
-.form__title {
-  margin-bottom: 43px;
-  font-size: 3em;
-  font-weight: bold;
-  line-height: 1.2;
-  text-align: center;
-  text-transform: uppercase; }
-
-.form__container {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap; }
-
-.form__group {
-  flex-basis: calc(50% - 10px);
-  display: flex;
-  flex-direction: column; }
-
-.form__row {
-  display: flex;
-  margin-bottom: 15px; }
-
-.form__title-label {
-  display: block;
-  margin-bottom: 3px;
-  font-size: 1.125em;
-  color: #f8faf9; }
-
-.form__label {
-  position: relative;
-  flex: 1 1 auto; }
-
-.form__label + .form__label {
-  margin-left: 20px; }
-
-.form__input {
-  width: 100%;
-  height: 58px;
-  border: 2px solid #fff;
-  padding: 0 10px;
-  font-size: 18px; }
-  .form__input:focus {
-    border: 2px solid #e01f3d;
-    outline: none; }
-
-.form__textarea {
-  width: 100%;
-  height: 180px;
-  padding: 10px;
-  font-size: 18px;
-  resize: none; }
-  .form__textarea:focus {
-    border: 2px solid #e01f3d;
-    outline: none; }
-
-.form__radio,
-.form__checkbox {
-  display: none; }
-
-.form__radio ~ .form__title-label {
-  padding-left: 35px; }
-  .form__radio ~ .form__title-label::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 100%;
-    transform: translate(19px, 6px);
-    display: none;
-    width: 13px;
-    height: 13px;
-    border-radius: 50%;
-    background: #e01f3d; }
-  .form__radio ~ .form__title-label::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    display: inline-block;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: #fff; }
-
-.form__radio:checked ~ .form__title-label::after {
-  display: inline-block; }
-
-.form__checkbox ~ .form__title-label {
-  padding-left: 35px; }
-  .form__checkbox ~ .form__title-label::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 100%;
-    transform: translate(19px, 6px);
-    display: none;
-    width: 13px;
-    height: 13px;
-    background: #e01f3d; }
-  .form__checkbox ~ .form__title-label::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    display: inline-block;
-    width: 25px;
-    height: 25px;
-    background: #fff; }
-
-.form__checkbox:checked ~ .form__title-label::after {
-  display: inline-block; }
-
-.form__reset {
-  text-align: right; }
-
-.form__row--wrap {
-  flex-wrap: wrap;
-  margin-bottom: 35px; }
-  .form__row--wrap .form__label {
-    flex: 1 1 50%;
-    margin-bottom: 7px; }
-  .form__row--wrap .form__label + .form__label {
-    margin-left: 0; }
-
-.form__row--button {
-  margin-bottom: 0; }
-
-.form__submit,
-.form__reset {
-  cursor: pointer; }
-  .form__submit:focus,
-  .form__reset:focus {
-    outline: none; }
-
-.form__reset {
-  margin-left: 16px;
-  border: none;
-  background: transparent;
-  font-size: 18px;
-  color: #999999; }
-
-.radio-menu {
-  position: fixed;
-  top: 242px;
-  right: 47px; }
-
-.radio-menu__item {
-  margin-bottom: 5px; }
-
-.radio-menu__link {
-  position: relative;
-  display: block;
-  width: 16px;
-  height: 16px;
-  border: 1px solid transparent;
-  border-radius: 50%;
-  transition: .3s ease-out; }
-  .radio-menu__link::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
-    background: #999; }
-  .radio-menu__link--activ {
-    border-color: #e42424; }
-  .radio-menu__link--activ::before {
-    background: #e42424; }
-  .radio-menu__link:hover {
-    border-color: #e42424;
-    transition: .3s ease-out; }
-  .radio-menu__link:hover::before {
-    background: #e42424;
-    transition: .3s ease-out; }
+  flex: 1 0;
+}
 
 .logo {
   display: block;
   width: 42px;
-  height: 42px; }
+  height: 42px;
+}
 
 /*-------------------- menu --------------------*/
 .menu__list {
   display: flex;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+}
 
 .menu__item {
-  padding: 0 13px; }
+  padding: 0 13px;
+}
 
 .menu__link {
-  transition: color .3s ease-out; }
-  .menu__link:hover {
-    color: #e01f3d;
-    transition: .3s ease-out; }
+  transition: color .3s ease-out;
+}
+.menu__link:hover {
+  color: #e01f3d;
+  transition: .3s ease-out;
+}
 
 /*-------------------- block contact --------------------*/
 .contact__phone {
   position: relative;
   font-size: 1.3125em;
-  line-height: 1; }
-  .contact__phone::before {
-    content: "";
-    display: inline-block;
-    position: absolute;
-    top: 8px;
-    left: -15px;
-    width: 12px;
-    height: 11px;
-    background: url(../img/icons/phone.svg) no-repeat center center/contain; }
+  line-height: 1;
+  white-space: nowrap;
+}
+.contact__phone::before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 8px;
+  left: -15px;
+  width: 12px;
+  height: 11px;
+  background: url(../img/icons/phone.svg) no-repeat center center/contain;
+}
 
 /*-------------------- block button --------------------*/
 .button {
@@ -410,36 +191,99 @@ address {
   color: #fff;
   text-transform: uppercase;
   transition: .3s ease-out;
-  /*-------------------- button mod --------------------*/ }
-  .button:hover {
-    border-color: #ca1b36;
-    background: #ca1b36;
-    transition: .3s ease-out; }
+  /*-------------------- button mod --------------------*/
+}
+.button:hover {
+  border-color: #ca1b36;
+  background: #ca1b36;
+  transition: .3s ease-out;
+}
 
 /*-------------------- block properties --------------------*/
 .properties {
   display: flex;
   justify-content: space-between;
   max-width: 500px;
-  align-items: flex-end; }
+  align-items: flex-end;
+}
 
 .properties__item {
   display: flex;
-  flex-basis: 145px; }
+  flex-basis: 145px;
+}
 
 .properties__image-box {
   flex: 1 0 44px;
-  height: 44px; }
+  height: 44px;
+}
 
 .properties__description {
-  margin-left: 8px; }
+  margin-left: 8px;
+}
+
+/*-------------------- layout advantages --------------------*/
+.advantages {
+  height: 100vh;
+  background: #fff;
+}
+
+.advantages__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 100px;
+}
+
+.advantages__title {
+  margin-bottom: 11px;
+  max-width: 580px;
+  font-size: 3em;
+  font-weight: bold;
+  line-height: 1.2;
+  text-transform: uppercase;
+}
+
+.advantages__subtitle {
+  margin-bottom: 57px;
+  max-width: 575px;
+  font-size: 1.125em;
+  line-height: 1.2;
+  text-align: center;
+  color: #666;
+}
+
+.advantages__list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.advantages__item {
+  position: relative;
+  flex-basis: calc(100% / 3 - 9px);
+}
+.advantages__item:not(:nth-child(3n)):not(:last-child) {
+  margin-right: 13px;
+}
+.advantages__item:not(:nth-child(3n)):not(:last-child)::after {
+  content: "";
+  position: absolute;
+  top: 22%;
+  left: 100%;
+  display: block;
+  width: 67px;
+  height: 21px;
+  background: url(../img/bg/break.png);
+  transform: translate(-50%, -50%);
+}
 
 /*-------------------- block advantages --------------------*/
 .advantage {
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center; }
+  text-align: center;
+}
 
 .advantage__imege-box {
   width: 125px;
@@ -447,59 +291,96 @@ address {
   border-radius: 50%;
   margin-bottom: 27px;
   padding: 32px;
-  background: #f5f5f5; }
+  background: #f5f5f5;
+}
 
 .advantage__content p {
   line-height: 1.2;
-  color: #666; }
+  color: #666;
+}
 .advantage__content h2, .advantage__content h3, .advantage__content h4, .advantage__content h5, .advantage__content h6 {
   margin-bottom: 13px;
   font-size: 1.5em;
-  font-weight: bold; }
+  font-weight: bold;
+}
+
+/*-------------------- layout reviews --------------------*/
+.reviews {
+  height: 100vh;
+  padding-top: 55px;
+}
+
+.reviews__title {
+  margin-bottom: 32px;
+  font-size: 3em;
+  font-weight: bold;
+  line-height: 1.2;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.reviews__list {
+  margin-bottom: 22px;
+}
+
+.rewievs__item {
+  display: none;
+}
+.rewievs__item--activ {
+  display: flex;
+}
 
 /*-------------------- block review --------------------*/
 .review {
   position: relative;
   padding: 51px 95px 34px 45px;
   background: #f5f5f5;
-  overflow: hidden; }
-  .review::before {
-    content: "";
-    position: absolute;
-    top: -65px;
-    right: 50%;
-    transform: translate(50%, 0);
-    display: block;
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
-    background: #fff; }
+  overflow: hidden;
+}
+.review::before {
+  content: "";
+  position: absolute;
+  top: -65px;
+  right: 50%;
+  transform: translate(50%, 0);
+  display: block;
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  background: #fff;
+}
 
 .review__avatar-box {
   flex: 1 0 254px;
-  height: 260px; }
+  height: 260px;
+}
 
 .review__content {
   margin-left: 20px;
   padding-top: 8px;
-  font-size: 18px; }
-  .review__content p {
-    margin-bottom: 27px;
-    line-height: 1.21;
-    color: #666; }
-  .review__content h3 {
-    margin-bottom: 24px;
-    font-size: 27px;
-    font-weight: bold; }
+  font-size: 18px;
+}
+.review__content p {
+  margin-bottom: 27px;
+  line-height: 1.21;
+  color: #666;
+}
+.review__content h3 {
+  margin-bottom: 24px;
+  font-size: 27px;
+  font-weight: bold;
+}
 
 .review__author-name {
   font-size: 18px;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 /*-------------------- block users --------------------*/
 .reviews__user {
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+}
 
 .users__item {
   width: 80px;
@@ -508,11 +389,249 @@ address {
   border-radius: 50%;
   overflow: hidden;
   transition: .3s ease-out;
-  cursor: pointer; }
-  .users__item--activ {
-    border: 6px solid #e01f3d; }
-  .users__item:hover {
-    border: 6px solid #e01f3d;
-    transition: .3s ease-out; }
+  cursor: pointer;
+}
+.users__item--activ {
+  border: 6px solid #e01f3d;
+}
+.users__item:hover {
+  border: 6px solid #e01f3d;
+  transition: .3s ease-out;
+}
 
-/*# sourceMappingURL=main.css.map */
+/*-------------------- layout form --------------------*/
+.form {
+  height: 100vh;
+  padding-top: 72px;
+  background: #161616 url(../img/bg/form.jpg) no-repeat center center/contain;
+  color: #fff;
+}
+
+.form__title {
+  margin-bottom: 43px;
+  font-size: 3em;
+  font-weight: bold;
+  line-height: 1.2;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.form__container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.form__group {
+  flex-basis: calc(50% - 10px);
+  display: flex;
+  flex-direction: column;
+}
+
+.form__row {
+  display: flex;
+  margin-bottom: 15px;
+}
+
+.form__title-label {
+  display: block;
+  margin-bottom: 3px;
+  font-size: 1.125em;
+  color: #f8faf9;
+}
+
+.form__label {
+  position: relative;
+  flex: 1 1 auto;
+}
+
+.form__label + .form__label {
+  margin-left: 20px;
+}
+
+.form__input {
+  width: 100%;
+  height: 58px;
+  border: 2px solid #fff;
+  padding: 0 10px;
+  font-size: 18px;
+}
+.form__input:focus {
+  border: 2px solid #e01f3d;
+  outline: none;
+}
+
+.form__textarea {
+  width: 100%;
+  height: 180px;
+  padding: 10px;
+  font-size: 18px;
+  resize: none;
+}
+.form__textarea:focus {
+  border: 2px solid #e01f3d;
+  outline: none;
+}
+
+.form__radio,
+.form__checkbox {
+  display: none;
+}
+
+.form__radio ~ .form__title-label {
+  padding-left: 35px;
+}
+.form__radio ~ .form__title-label::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 100%;
+  transform: translate(19px, 6px);
+  display: none;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background: #e01f3d;
+}
+.form__radio ~ .form__title-label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #fff;
+}
+
+.form__radio:checked ~ .form__title-label::after {
+  display: inline-block;
+}
+
+.form__checkbox ~ .form__title-label {
+  padding-left: 35px;
+}
+.form__checkbox ~ .form__title-label::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 100%;
+  transform: translate(19px, 6px);
+  display: none;
+  width: 13px;
+  height: 13px;
+  background: #e01f3d;
+}
+.form__checkbox ~ .form__title-label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  background: #fff;
+}
+
+.form__checkbox:checked ~ .form__title-label::after {
+  display: inline-block;
+}
+
+.form__reset {
+  text-align: right;
+}
+
+.form__row--wrap {
+  flex-wrap: wrap;
+  margin-bottom: 35px;
+}
+.form__row--wrap .form__label {
+  flex: 1 1 50%;
+  margin-bottom: 7px;
+}
+.form__row--wrap .form__label + .form__label {
+  margin-left: 0;
+}
+
+.form__row--button {
+  margin-bottom: 0;
+}
+
+.form__submit,
+.form__reset {
+  cursor: pointer;
+}
+.form__submit:focus,
+.form__reset:focus {
+  outline: none;
+}
+
+.form__reset {
+  margin-left: 16px;
+  border: none;
+  background: transparent;
+  font-size: 18px;
+  color: #999999;
+}
+
+/*-------------------- layout map --------------------*/
+.map {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.map__yandex {
+  flex-grow: 1;
+  background: url(../img/bg/map.jpg) center center/cover no-repeat;
+}
+
+/*-------------------- layout footer --------------------*/
+.footer {
+  height: 93px;
+  background: #ffffff;
+}
+
+.radio-menu {
+  position: fixed;
+  top: 242px;
+  right: 47px;
+}
+
+.radio-menu__item {
+  margin-bottom: 5px;
+}
+
+.radio-menu__link {
+  position: relative;
+  display: block;
+  width: 16px;
+  height: 16px;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  transition: .3s ease-out;
+}
+.radio-menu__link::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #999;
+}
+.radio-menu__link--activ {
+  border-color: #e42424;
+}
+.radio-menu__link--activ::before {
+  background: #e42424;
+}
+.radio-menu__link:hover {
+  border-color: #e42424;
+  transition: .3s ease-out;
+}
+.radio-menu__link:hover::before {
+  background: #e42424;
+  transition: .3s ease-out;
+}
