--- a/course_2/scss/base/_variables.scss
+++ b/course_2/scss/base/_variables.scss
@@ -1,7 +1,35 @@
-// base font size
+// -------------------- fonts --------------------
 $base-font-size: 16px;
 
-// base colors
+// -------------------- colors --------------------
+$white-ff: #fff;
+$white-f5: #f5f5f5;
+$white-f8: #f8faf9;
+
+$grey-ef: #efefef;
+$grey-cf: #cfdeda;
+$grey-b2: #b2b2b2;
+$grey-9a: #9a9a9a;
+$grey-99: #999;
+$grey-6e: #6e6e6e;
+$grey-66: #666;
+$grey-33: #333537;
+$grey-30: #303030;
+
+$red-ca: #ca1b36;
+$red-e0: #e01f3d;
+$red-e4: #e42424;
+
+$black-15: #151515;
+$black-00: #000;
+
+
+
+
+
+
+
+// colors
 $base-color-primary: #f5f5f5;
 $base-color-secondary: #e01f3d;
 
@@ -23,24 +51,10 @@ $text-color-form: #f8faf9;
 $base-color-third: #999;
 
 
-
-
-
-
-
-
-
 $bg-color-grey: #333537;
 
 $bg-color-icon: #b2b2b2;
 
 $bg-color-right-menu: #e42424;
 
-$bg-color-red: #cfdeda;
-
-$bg-color-red: #efebeb;
-$bg-color-red: #303030;
-$bg-color-red: #151515;
-
-$bg-color-red: #efefef;
 
