--- a/course_2/scss/base/_variables.scss
+++ b/course_2/scss/base/_variables.scss
@@ -1,5 +1,6 @@
 // -------------------- fonts --------------------
 $base-font-size: 16px;
+$base-font-family: 'Play', Helvetica, sans-serif;
 
 // -------------------- colors --------------------
 $white-ff: #fff;
@@ -8,53 +9,38 @@ $white-f8: #f8faf9;
 
 $grey-ef: #efefef;
 $grey-cf: #cfdeda;
-$grey-b2: #b2b2b2;
-$grey-9a: #9a9a9a;
+$grey-b2: #b2b2b2;//$bg-color-icon: #b2b2b2;
+$grey-9a: #9a9a9a;//$bg-attribut: #9a9a9a;
 $grey-99: #999;
-$grey-6e: #6e6e6e;
+$grey-6e: #6e6e6e;//$bg-attribu-hover: #6e6e6e;
 $grey-66: #666;
 $grey-33: #333537;
 $grey-30: #303030;
 
 $red-ca: #ca1b36;
 $red-e0: #e01f3d;
-$red-e4: #e42424;
+$red-e4: #e42424;//$bg-color-right-menu: #e42424;
 
 $black-15: #151515;
 $black-00: #000;
 
+// -------------------- width --------------------
+$width-desktop: 1100px;
+$width-tablet: 768px;
+$width-mobile: 480px;
 
-
-
-
-
-
-// colors
-$base-color-primary: #f5f5f5;
-$base-color-secondary: #e01f3d;
-
-// special colors
-$btn-color-hover: #ca1b36;
-
-
-// background color of elements
-$bg-attribut: #9a9a9a;
-$bg-attribu-hover: #6e6e6e;
-
-// text colors
-$text-color-black: #000;
-$text-color-white: #fff;
-
-$text-color-secondary: #666;
-$text-color-form: #f8faf9;
-
-$base-color-third: #999;
-
-
-$bg-color-grey: #333537;
-
-$bg-color-icon: #b2b2b2;
-
-$bg-color-right-menu: #e42424;
-
-
+// -------------------- mixin --------------------
+@mixin tablet {
+  @media screen and (max-width: $width-tablet) {
+    @content;
+  }
+}
+@mixin mobile {
+  @media screen and (max-width: $width-mobile) {
+    @content;
+  }
+}
+// -------------------- function --------------------
+@function rem($rem) {
+  @return $rem / $base-font-size + 0rem;
+}
