--- a/course_2/scss/main.scss
+++ b/course_2/scss/main.scss
@@ -51,7 +51,7 @@
 @import 'layout/footer';
 @import 'block/social';
 //-------------------- radio-menu --------------------
-@import 'layout/radio-menu';
+@import 'layout/radio-menu';// +
 
 //-------------------- decor --------------------
 @import 'block/decor';
