--- a/course_2/scss/block/_button.scss
+++ b/course_2/scss/block/_button.scss
@@ -1,19 +1,25 @@
+$button-bg-color: $red-e0;
+$button-text-color: $white-ff;
+$button-border-color: $red-e0;
+
+$button-hover-bg-color: $red-ca;
+$button-hover-border-color: $red-ca;
 /*-------------------- block button --------------------*/
 .button {
   display: inline-block;
-  border: 1px solid $base-color-secondary;
-  border-radius: 26px;
-  padding: 18px 40px;
-  background: $base-color-secondary;
+  border: rem(1px) solid $button-border-color;
+  border-radius: rem(26px);
+  padding: rem(18px) rem(40px);
+  background: $button-bg-color;
   font-weight: bold;
   line-height: 1;
-  color: $text-color-white;
+  color: $button-text-color;
   text-transform: uppercase;
   transition: .3s ease-out;
 
   &:hover {
-    border-color: $btn-color-hover;
-    background: $btn-color-hover;
+    border-color: $button-hover-border-color;
+    background: $button-hover-bg-color;
     transition: .3s ease-out;
   }
 
