--- a/course_2/scss/block/_menu.scss
+++ b/course_2/scss/block/_menu.scss
@@ -1,16 +1,18 @@
+$menu__link-hover-color:$red-e0;
+
 /*-------------------- menu --------------------*/
 .menu__list {
   display: flex;
   flex-wrap: wrap;
 }
 .menu__item {
-  padding: 0 13px;
+  padding: 0 rem(13px);
 }
 .menu__link {
   transition: color .3s ease-out;
 
   &:hover {
-    color: $base-color-secondary;
+    color: $menu__link-hover-color;
     transition: .3s ease-out;
   }
 }
