--- a/course_2/scss/block/_properties.scss
+++ b/course_2/scss/block/_properties.scss
@@ -2,17 +2,17 @@
 .properties {
   display: flex;
   justify-content: space-between;
-  max-width: 500px;
+  max-width: rem(500px);
   align-items: flex-end;
 }
 .properties__item {
   display: flex;
-  flex-basis: 145px;  
+  flex-basis: rem(145px);  
 }
 .properties__image-box {
-  flex: 1 0 44px;
-  height: 44px;
+  flex: 1 0 rem(44px);
+  height: rem(44px);
 }
 .properties__description {
-  margin-left: 8px;
+  margin-left: rem(8px);
 }
