--- a/course_2/scss/layout/_advantages.scss
+++ b/course_2/scss/layout/_advantages.scss
@@ -1,52 +1,76 @@
+$advantages__subtitle-color: $grey-66;
+
 /*-------------------- layout advantages --------------------*/
 .advantages {
   height: 100vh;
-  background: $text-color-white;
 }
-.advantages__container {
+.advantages .container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 100px;
+  justify-content: center;
+  height: 100%;
 }
 .advantages__title {
-  margin-bottom: 11px;
-  max-width: 580px;
-  font-size: 3em;
+  margin-bottom: rem(11px);
+  font-size: rem(48px);
   font-weight: bold;
   line-height: 1.2;
+  text-align: center;
   text-transform: uppercase;
+
+  @include mobile {
+    font-size: rem(36px);
+ }
 }
 .advantages__subtitle {
-  margin-bottom: 57px;
-  max-width: 575px;
-  font-size: 1.125em;
+  margin-bottom: rem(57px);
+  max-width: rem(575px);
+  font-size: rem(18px);
   line-height: 1.2;
   text-align: center;
-  color: $text-color-secondary;
+  color: $advantages__subtitle-color;
+
+  @include mobile {
+    margin-bottom: rem(37px);
+    font-size: rem(16px);
+ }
 }
 .advantages__list {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  margin: 0 rem(-43px);
+  
+  @include tablet {
+    margin: 0 rem(-31px);
+  }
+
+  @include mobile {
+    flex-direction: column;
+    flex-wrap: nowrap;
+    margin: 0;
+  }
 }
 .advantages__item {
   position: relative;
-  flex-basis: calc(100% / 3 - 9px);
-
-  &:not(:nth-child(3n)):not(:last-child) {
-    margin-right: 13px;
-  }
+  flex-basis: calc(100% / 3 - 1px);
 
   &:not(:nth-child(3n)):not(:last-child)::after {
     content: "";
     position: absolute;
-    top: 22%;
+    top: rem(60px);
     left: 100%;
     display: block;
-    width: 67px;
-    height: 21px;
+    width: rem(67px);
+    height: rem(21px);
     background: url(../img/bg/break.png);
     transform: translate(-50%, -50%);
+  }
+
+  @include tablet {
+    &:not(:nth-child(3n)):not(:last-child)::after{
+      display: none;
+    }
   }
 }
