--- a/course_2/scss/layout/_form.scss
+++ b/course_2/scss/layout/_form.scss
@@ -1,22 +1,45 @@
+$form-color: $white-ff;
+
 /*-------------------- layout form --------------------*/
 .form {
   height: 100vh;
-  padding-top: 72px;
-  background: #161616 url(../img/bg/form.jpg) no-repeat center center/contain;
-  color: $text-color-white;
+  background: #161616 url(../img/bg/form.jpg) no-repeat center bottom/contain;
+  color: $form-color;
+
+  & .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
 }
 .form__title {
-  margin-bottom: 43px;
-  font-size: 3em;
+  margin-bottom: rem(43px);
+  font-size: rem(48px);
   font-weight: bold;
   line-height: 1.2;
   text-align: center;
   text-transform: uppercase;
+
+  @include tablet {
+    margin-bottom: rem(28px);
+  }
+
+  @include mobile {
+    font-size: rem(36px);
+  }
 }
-.form__container {
+.form__wrapper {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+
+  @include tablet {
+    flex-direction: column;
+    flex-wrap: nowrap;
+    max-width: rem(460px);
+  }
 }
 .form__group {
   flex-basis: calc(50% - 10px);
@@ -25,43 +48,79 @@
 }
 .form__row {
   display: flex;
-  margin-bottom: 15px;
+  margin-bottom: rem(15px);
+
+  @include tablet {
+    margin-bottom: rem(12px);
+  }
+}
+.form__row--wrap {
+  flex-wrap: wrap;
+  margin-bottom: rem(35px);
+
+  & .form__label {
+  flex: 1 1 50%;
+  margin-bottom: rem(7px);
+  }
+
+  & .form__label + .form__label {
+    margin-left: 0;
+  }
+
+  @include mobile {
+    justify-content: center;
+  }
+}
+.form__row--button {
+  margin-bottom: 0;
+
+  @include tablet {
+    justify-content: center;
+  }
 }
 .form__title-label {
   display: block;
-  margin-bottom: 3px;
+  margin-bottom: rem(3px);
   font-size: 1.125em;
-  color: $text-color-form;
+  color: $white-f8;
 }
 .form__label {
   position: relative;
   flex: 1 1 auto;
 }
 .form__label + .form__label {
-  margin-left: 20px;
+  margin-left: rem(20px);
 }
 .form__input {
   width: 100%;
-  height: 58px;
-  border: 2px solid #fff;
-  padding: 0 10px;
-  font-size: 18px;
+  height: rem(58px);
+  border: rem(2px) solid #fff;
+  padding: 0 rem(10px);
+  font-size: rem(18px);
 
   &:focus {
-    border: 2px solid $base-color-secondary;
+    border: rem(2px) solid $red-e0;
     outline: none;
+  }
+
+  @include tablet {
+    height: rem(35px);
   }
 }
 .form__textarea {
   width: 100%;
-  height: 180px;
-  padding: 10px;
-  font-size: 18px;
+  height: rem(180px);
+  padding: rem(10px);
+  font-size: rem(18px);
   resize: none;
 
   &:focus {
-    border: 2px solid $base-color-secondary;
+    border: rem(2px) solid $red-e0;
     outline: none;
+  }
+
+  @include tablet {
+    height: rem(80px);
   }
 }
 .form__radio,
@@ -69,19 +128,19 @@
   display: none;
 }
 .form__radio ~ .form__title-label {
-  padding-left: 35px;
+  padding-left: rem(35px);
 
   &::after {
   content: "";
   position: absolute;
   top: 0;
   right: 100%;
-  transform: translate(19px, 6px);
+  transform: translate(rem(19px), 6px);
   display: none;
-  width: 13px;
-  height: 13px;
+  width: rem(13px);
+  height: rem(13px);
   border-radius: 50%;
-  background: $base-color-secondary;
+  background: $red-e0;
   }
 
   &::before {
@@ -89,8 +148,8 @@
     position: absolute;
     left: 0;
     display: inline-block;
-    width: 25px;
-    height: 25px;
+    width: rem(25px);
+    height: rem(25px);
     border-radius: 50%;
     background: #fff;
   }
@@ -102,18 +161,18 @@
     }
 }
 .form__checkbox ~ .form__title-label {
-  padding-left: 35px;
+  padding-left: rem(35px);
 
   &::after {
   content: "";
   position: absolute;
   top: 0;
   right: 100%;
-  transform: translate(19px, 6px);
+  transform: translate(rem(19px), 6px);
   display: none;
-  width: 13px;
-  height: 13px;
-  background: $base-color-secondary;
+  width: rem(13px);
+  height: rem(13px);
+  background: $red-e0;
   }
 
   &::before {
@@ -121,8 +180,8 @@
     position: absolute;
     left: 0;
     display: inline-block;
-    width: 25px;
-    height: 25px;
+    width: rem(25px);
+    height: rem(25px);
     background: #fff;
   }
 }
@@ -136,22 +195,6 @@
   text-align: right;
 }
 
-.form__row--wrap {
-  flex-wrap: wrap;
-  margin-bottom: 35px;
-
-  & .form__label {
-  flex: 1 1 50%;
-  margin-bottom: 7px;
-  }
-
-  & .form__label + .form__label {
-    margin-left: 0;
-  }
-}
-.form__row--button {
-  margin-bottom: 0;
-}
 .form__submit,
 .form__reset {
   cursor: pointer;
@@ -161,9 +204,9 @@
   }
 }
 .form__reset {
-  margin-left: 16px;
+  margin-left: rem(16px);
   border: none;
   background: transparent;
-  font-size: 18px;
+  font-size: rem(18px);
   color: #999999;
 }
