--- a/course_2/scss/layout/_reviews.scss
+++ b/course_2/scss/layout/_reviews.scss
@@ -1,18 +1,26 @@
 /*-------------------- layout reviews --------------------*/
 .reviews {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   height: 100vh;
-  padding-top: 55px;
 }
 .reviews__title {
-  margin-bottom: 32px;
-  font-size: 3em;
+  margin-bottom: rem(32px);
+  font-size: rem(48px);
   font-weight: bold;
   line-height: 1.2;
   text-align: center;
   text-transform: uppercase;
+
+  @include mobile {
+    margin-bottom: rem(26px);
+    font-size: rem(36px);
+  }
 }
 .reviews__list {
-  margin-bottom: 22px;
+  margin-bottom: rem(22px);
 }
 .rewievs__item {
   display: none;
