--- a/course_2/scss/block/_advantage.scss
+++ b/course_2/scss/block/_advantage.scss
@@ -37,6 +37,10 @@ $advetage-p-text-color: $grey-66;
     margin-bottom: rem(40px);
   }
 }
+.advantage__image {
+  width: 100%;
+  height: 100%;
+}
 .advantage__content {
   
   & p {
