--- a/course_2/scss/block/_properties.scss
+++ b/course_2/scss/block/_properties.scss
@@ -13,6 +13,10 @@
   flex: 1 0 rem(44px);
   height: rem(44px);
 }
+.properties__image {
+  width: 100%;
+  height: 100%;
+}
 .properties__description {
   margin-left: rem(8px);
 }
