--- a/course_2/scss/layout/_form.scss
+++ b/course_2/scss/layout/_form.scss
@@ -13,6 +13,11 @@ $form-color: $white-ff;
     justify-content: center;
     height: 100%;
   }
+
+  @include mobile {
+    height: auto;
+    padding: rem(15px) 0;
+  }
 }
 .form__title {
   margin-bottom: rem(43px);
