--- a/course_2/css/main.css
+++ b/course_2/css/main.css
@@ -64,16 +64,21 @@ a {
   margin: 0 auto;
   padding: 0 5rem;
 }
+@media screen and (max-width: 1100px) {
+  .container {
+    padding: 0 7.2727272727vw;
+  }
+}
 @media screen and (max-width: 768px) {
   .container {
     max-width: 768px;
-    padding: 0 1.5rem;
+    padding: 0 3.125vw;
   }
 }
 @media screen and (max-width: 480px) {
   .container {
     max-width: 480px;
-    padding: 0 0.625rem;
+    padding: 0 2.0833333333vw;
   }
 }
 
@@ -95,7 +100,8 @@ a {
 }
 @media screen and (max-width: 480px) {
   .header {
-    margin-bottom: 2.25rem;
+    margin-bottom: 4.5vh;
+    padding-top: 2.875vh;
   }
 }
 
@@ -144,7 +150,6 @@ a {
 }
 @media screen and (max-width: 480px) {
   .hero {
-    height: auto;
     padding-bottom: 0.9375rem;
   }
 }
@@ -153,26 +158,33 @@ a {
   position: absolute;
   top: 16.5%;
   right: 8%;
-  max-width: 31.25rem;
-  max-height: 31.25rem;
+  width: 31.25rem;
+  height: 31.25rem;
   border-radius: 50%;
   padding: 0.625rem;
   background: #fff;
   overflow: hidden;
 }
+@media screen and (max-width: 1100px) {
+  .hero__image-box {
+    max-width: 45.4545454545vw;
+    max-height: 45.4545454545vw;
+  }
+}
 @media screen and (max-width: 768px) {
   .hero__image-box {
     position: static;
-    max-width: 21.75rem;
-    max-height: 21.75rem;
+    max-width: 45.3125vw;
+    max-height: 45.3125vw;
     margin: 0 auto;
-    margin-bottom: 1.6875rem;
+    margin-bottom: 2.7vh;
   }
 }
 @media screen and (max-width: 480px) {
   .hero__image-box {
-    max-width: 18.5rem;
-    max-height: 18.5rem;
+    max-width: 37vh;
+    max-height: 37vh;
+    margin-bottom: 2.7vh;
   }
 }
 
@@ -200,21 +212,22 @@ a {
 }
 @media screen and (max-width: 768px) {
   .hero__title {
-    max-width: 90%;
-    margin-bottom: 0.625rem;
+    max-width: 100%;
+    padding: 0 5.2083333333vw;
+    margin-bottom: 1vh;
   }
 }
 @media screen and (max-width: 480px) {
   .hero__title {
-    max-width: 70%;
-    font-size: 2.25rem;
+    padding: 0;
+    font-size: 4.5vh;
   }
 }
 
 .hero__subtitle {
   max-width: 20.3125rem;
   margin-bottom: 2.3125rem;
-  font-size: 1.125em;
+  font-size: 1.125rem;
 }
 @media screen and (max-width: 768px) {
   .hero__subtitle {
@@ -224,12 +237,18 @@ a {
 @media screen and (max-width: 480px) {
   .hero__subtitle {
     max-width: 70%;
-    margin-bottom: 1.625rem;
+    margin-bottom: 3.25vh;
+    font-size: 2.25vh;
   }
 }
 
 .hero__button {
   margin-bottom: 5.75rem;
+}
+@media screen and (max-width: 480px) {
+  .hero__button {
+    margin-bottom: 11.5vh;
+  }
 }
 
 .hero .properties {
@@ -289,6 +308,8 @@ a {
 @media screen and (max-width: 480px) {
   .contact__description {
     margin-bottom: 0.75rem;
+    font-size: 1.25rem;
+    text-align: center;
   }
 }
 
@@ -367,7 +388,6 @@ a {
 }
 @media screen and (max-width: 480px) {
   .advantages {
-    height: auto;
     padding: 0.9375rem 0;
   }
 }
@@ -390,7 +410,8 @@ a {
 }
 @media screen and (max-width: 480px) {
   .advantages__title {
-    font-size: 2.25rem;
+    margin-bottom: 1.375vh;
+    font-size: 4.5vh;
   }
 }
 
@@ -404,8 +425,8 @@ a {
 }
 @media screen and (max-width: 480px) {
   .advantages__subtitle {
-    margin-bottom: 2.3125rem;
-    font-size: 1rem;
+    margin-bottom: 4.625vh;
+    font-size: 2vh;
   }
 }
 
@@ -465,8 +486,8 @@ a {
 @media screen and (max-width: 480px) {
   .advantage {
     flex-direction: row;
-    align-items: flex-start;
     text-align: start;
+    margin-bottom: 5vh;
   }
 }
 
@@ -485,9 +506,12 @@ a {
 }
 @media screen and (max-width: 480px) {
   .advantage__imege-box {
-    flex: 0 0 7.8125rem;
+    flex: 0 0 26.0416666667vw;
+    width: 26.0416666667vw;
+    height: 26.0416666667vw;
+    padding: 6.6666666667vw;
     margin-right: 0.9375rem;
-    margin-bottom: 2.5rem;
+    margin-bottom: 0;
   }
 }
 
@@ -500,14 +524,25 @@ a {
   line-height: 1.2;
   color: #666;
 }
+@media screen and (max-width: 480px) {
+  .advantage__content p {
+    font-size: 2vh;
+  }
+}
 .advantage__content h2, .advantage__content h3, .advantage__content h4, .advantage__content h5, .advantage__content h6 {
   margin-bottom: 0.8125rem;
-  font-size: 1.5em;
+  font-size: 1.5rem;
   font-weight: bold;
 }
 @media screen and (max-width: 768px) {
   .advantage__content h2, .advantage__content h3, .advantage__content h4, .advantage__content h5, .advantage__content h6 {
     margin-bottom: 0.375rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .advantage__content h2, .advantage__content h3, .advantage__content h4, .advantage__content h5, .advantage__content h6 {
+    margin-bottom: 0.75vh;
+    font-size: 3vh;
   }
 }
 
@@ -521,7 +556,6 @@ a {
 }
 @media screen and (max-width: 480px) {
   .reviews {
-    height: auto;
     padding: 0.9375rem 0;
   }
 }
@@ -536,8 +570,8 @@ a {
 }
 @media screen and (max-width: 480px) {
   .reviews__title {
-    margin-bottom: 1.625rem;
-    font-size: 2.25rem;
+    margin-bottom: 3.25vh;
+    font-size: 4.5vh;
   }
 }
 
@@ -581,7 +615,7 @@ a {
 }
 @media screen and (max-width: 480px) {
   .review {
-    padding: 3.625rem 2.375rem 3.4375rem;
+    padding: 12.0833333333vw 7.9166666667vw 11.4583333333vw;
   }
 }
 
@@ -599,8 +633,8 @@ a {
 }
 @media screen and (max-width: 480px) {
   .review__avatar-box {
-    width: 7.8125rem;
-    height: 7.8125rem;
+    width: 15.625vh;
+    height: 15.625vh;
     margin-bottom: 0.8125rem;
   }
 }
@@ -626,9 +660,11 @@ a {
   }
   .review__content p {
     margin-bottom: 1.1875rem;
+    font-size: 2.25vh;
   }
   .review__content h3 {
     margin-bottom: 0.875rem;
+    font-size: 3.375vh;
   }
 }
 @media screen and (max-width: 480px) {
@@ -704,8 +740,7 @@ a {
 }
 @media screen and (max-width: 480px) {
   .form {
-    height: auto;
-    padding: 0.9375rem 0;
+    padding: 1.875vh 0;
   }
 }
 
@@ -724,7 +759,8 @@ a {
 }
 @media screen and (max-width: 480px) {
   .form__title {
-    font-size: 2.25rem;
+    font-size: 4.5vh;
+    margin-bottom: 3.5vh;
   }
 }
 
@@ -786,8 +822,13 @@ a {
 .form__title-label {
   display: block;
   margin-bottom: 0.1875rem;
-  font-size: 1.125em;
+  font-size: 1.125rem;
   color: #f8faf9;
+}
+@media screen and (max-width: 480px) {
+  .form__title-label {
+    font-size: 2.25vh;
+  }
 }
 
 .form__label {
@@ -813,6 +854,11 @@ a {
 @media screen and (max-width: 768px) {
   .form__input {
     height: 2.1875rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .form__input {
+    font-size: 2.25vh;
   }
 }
 
@@ -1008,8 +1054,9 @@ a {
 /*-------------------- layout radio-menu --------------------*/
 .radio-menu {
   position: fixed;
-  top: 15.125rem;
+  top: 50%;
   right: 2.9375rem;
+  transform: translate(0, -50%);
 }
 @media screen and (max-width: 768px) {
   .radio-menu {
