--- a/course_2/scss/block/_contact.scss
+++ b/course_2/scss/block/_contact.scss
@@ -13,6 +13,8 @@
 
   @include mobile {
     margin-bottom: rem(12px);
+    font-size: rem(20px);
+    text-align: center;
   }
 }
 .contact__phone {
