--- a/course_2/scss/layout/_form.scss
+++ b/course_2/scss/layout/_form.scss
@@ -15,8 +15,7 @@ $form-color: $white-ff;
   }
 
   @include mobile {
-    height: auto;
-    padding: rem(15px) 0;
+    padding: vh(15, 800) 0;
   }
 }
 .form__title {
@@ -26,13 +25,14 @@ $form-color: $white-ff;
   line-height: 1.2;
   text-align: center;
   text-transform: uppercase;
-
+  
   @include tablet {
     margin-bottom: rem(28px);
   }
-
+  
   @include mobile {
-    font-size: rem(36px);
+    font-size: vh(36, 800);
+    margin-bottom: vh(28, 800);
   }
 }
 .form__wrapper {
@@ -78,7 +78,7 @@ $form-color: $white-ff;
 }
 .form__row--button {
   margin-bottom: 0;
-
+  
   @include tablet {
     justify-content: center;
   }
@@ -86,8 +86,12 @@ $form-color: $white-ff;
 .form__title-label {
   display: block;
   margin-bottom: rem(3px);
-  font-size: 1.125em;
+  font-size: rem(18px);
   color: $white-f8;
+  
+  @include mobile {
+    font-size: vh(18, 800);
+  }
 }
 .form__label {
   position: relative;
@@ -110,6 +114,10 @@ $form-color: $white-ff;
 
   @include tablet {
     height: rem(35px);
+  }
+
+  @include mobile {
+    font-size: vh(18, 800);
   }
 }
 .form__textarea {
