--- a/course_2/scss/layout/_reviews.scss
+++ b/course_2/scss/layout/_reviews.scss
@@ -7,7 +7,6 @@
   height: 100vh;
 
   @include mobile {
-    height: auto;
     padding: rem(15px) 0;
   }
 }
@@ -20,8 +19,8 @@
   text-transform: uppercase;
 
   @include mobile {
-    margin-bottom: rem(26px);
-    font-size: rem(36px);
+    margin-bottom: vh(26, 800);
+    font-size: vh(36, 800);
   }
 }
 .reviews__list {
