--- a/course_2/scss/base/_variables.scss
+++ b/course_2/scss/base/_variables.scss
@@ -15,6 +15,7 @@ $grey-99: #999;
 $grey-6e: #6e6e6e;//$bg-attribu-hover: #6e6e6e;
 $grey-66: #666;
 $grey-33: #333537;
+$grey-31: #313436;
 $grey-30: #303030;
 
 $red-ca: #ca1b36;
