--- a/course_2/css/main.css
+++ b/course_2/css/main.css
@@ -82,17 +82,24 @@ a {
   }
 }
 
-/*-------------------- component card --------------------*/
-.card {
-  display: flex;
-  align-items: center;
-}
-.card__body {
-  display: flex;
-  flex-direction: column;
-}
-
 /*-------------------- component dropdown --------------------*/
+.dropdown {
+  margin-bottom: 1.625rem;
+}
+.dropdown__btn {
+  width: 5.625rem;
+  height: 5.625rem;
+  padding: 1.75rem;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  background: #9a9a9a;
+}
+@media screen and (max-width: 768px) {
+  .dropdown__btn {
+    display: none;
+  }
+}
 .dropdown__btn-img {
   width: 100%;
   height: 100%;
@@ -129,7 +136,15 @@ a {
 }
 @media screen and (max-width: 768px) {
   .header__menu {
+    position: fixed;
+    top: 0;
+    left: 0;
     display: none;
+    width: 100vw;
+    height: 100vh;
+    margin-left: 0;
+    background: #313436;
+    z-index: 5;
   }
 }
 
@@ -155,7 +170,15 @@ a {
 @media screen and (max-width: 768px) {
   .btn-menu {
     display: block;
+    z-index: 10;
   }
+}
+
+.btn-menu__img {
+  display: none;
+}
+.btn-menu__img--activ {
+  display: inline;
 }
 
 /*-------------------- layout hero --------------------*/
@@ -295,6 +318,16 @@ a {
 .menu__list {
   display: flex;
   flex-wrap: wrap;
+}
+@media screen and (max-width: 768px) {
+  .menu__list {
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 13.8vh;
+    font-size: 2.25rem;
+    color: #fff;
+  }
 }
 
 .menu__item {
@@ -577,14 +610,15 @@ a {
 
 /*-------------------- block product --------------------*/
 .product {
-  background: #7dd874;
+  display: flex;
+  align-items: center;
 }
 @media screen and (max-width: 768px) {
   .product {
     flex-direction: column;
   }
 }
-.product .card__aside {
+.product__aside {
   flex-shrink: 0;
   width: 41.8181818182vw;
   height: 41.8181818182vw;
@@ -592,12 +626,13 @@ a {
   max-height: 28.75rem;
   border-radius: 50%;
   overflow: hidden;
+  margin-left: 1.25rem;
   margin-right: 3.625rem;
   padding: 2.375rem;
   background: #fff;
 }
 @media screen and (max-width: 768px) {
-  .product .card__aside {
+  .product__aside {
     width: 31.6vh;
     height: 31.6vh;
     margin-right: 0;
@@ -605,7 +640,7 @@ a {
   }
 }
 @media screen and (max-width: 480px) {
-  .product .card__aside {
+  .product__aside {
     width: 61.0416666667vw;
     height: 61.0416666667vw;
     padding: 6.875vw;
@@ -614,6 +649,85 @@ a {
 .product__body {
   display: flex;
   flex-direction: column;
+}
+@media screen and (max-width: 768px) {
+  .product__body {
+    text-align: center;
+  }
+}
+.product__header {
+  margin-bottom: 0.75rem;
+}
+.product__header h3 {
+  font-size: 2.25rem;
+  font-weight: bold;
+  line-height: 1.2;
+  text-transform: uppercase;
+}
+@media screen and (max-width: 480px) {
+  .product__header h3 {
+    font-size: 3.75vh;
+  }
+}
+.product__content p {
+  color: #666666;
+}
+@media screen and (max-width: 480px) {
+  .product__content p {
+    font-size: 2vh;
+  }
+}
+.product__content b {
+  color: #000;
+}
+.product__row {
+  display: flex;
+  margin: 2.8125rem 0;
+}
+@media screen and (max-width: 768px) {
+  .product__row {
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 480px) {
+  .product__row {
+    margin: 9.375vw 0;
+  }
+}
+.product__props {
+  min-width: 9.6875rem;
+  text-align: left;
+}
+@media screen and (max-width: 480px) {
+  .product__props {
+    min-width: 32.2916666667vw;
+  }
+}
+.product__footer {
+  display: flex;
+}
+@media screen and (max-width: 768px) {
+  .product__footer {
+    justify-content: center;
+  }
+}
+.product__price {
+  font-size: 2.25rem;
+}
+.product__price::after {
+  content: url(../img/icons/rub.svg);
+  display: inline-block;
+  height: 18px;
+  width: 18px;
+  margin-left: 3px;
+}
+.product__buy {
+  margin-left: 1.75rem;
+}
+@media screen and (max-width: 480px) {
+  .product__buy {
+    margin-left: 3.125vw;
+  }
 }
 
 /*-------------------- layout reviews --------------------*/
