--- a/course_2/scss/block/_menu.scss
+++ b/course_2/scss/block/_menu.scss
@@ -4,6 +4,15 @@ $menu__link-hover-color:$red-e0;
 .menu__list {
   display: flex;
   flex-wrap: wrap;
+
+  @include tablet {
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: center;
+    padding-top: vh(138, 1000);
+    font-size: rem(36px);
+    color: #fff;
+  }
 }
 .menu__item {
   padding: 0 rem(13px);
