--- a/course_2/scss/block/_product.scss
+++ b/course_2/scss/block/_product.scss
@@ -2,13 +2,14 @@ $productAsideBgColor: $white-ff;
 
 /*-------------------- block product --------------------*/
 .product {
-  background: #7dd874;
+  display: flex;
+  align-items: center;
 
   @include tablet {
     flex-direction: column;
   }
 
-  & .card__aside {
+  &__aside {
     flex-shrink: 0;
     width: vw(460, 1100);
     height: vw(460, 1100);
@@ -16,6 +17,7 @@ $productAsideBgColor: $white-ff;
     max-height: rem(460px);
     border-radius: 50%;
     overflow: hidden;
+    margin-left: rem(20px);
     margin-right: rem(58px);
     padding: rem(38px);
     background: $productAsideBgColor;
@@ -39,17 +41,85 @@ $productAsideBgColor: $white-ff;
     display: flex;
     flex-direction: column;
 
-    // &__header {
-    
-    // }
-
-    // &__content {
-    
-    // }
-
-    // &__footer {
-    
-    // }
+    @include tablet {
+      text-align: center;
+    }
   }
 
+  &__header {
+    margin-bottom: rem(12px);
+  }
+
+  &__header h3 {
+    font-size: rem(36px);
+    font-weight: bold;
+    line-height: 1.2;
+    text-transform: uppercase;
+
+    @include mobile {
+      font-size: vh(30, 800);
+    }
+  }
+
+  &__content p {
+    color: #666666;
+
+    @include mobile {
+      font-size: vh(16, 800);
+    }
+  }
+
+  &__content b {
+    color: #000;
+  }
+
+  &__row {
+    display: flex;
+    margin: rem(45px) 0;
+
+    @include tablet {
+      justify-content: center;
+    }
+
+    @include mobile {
+      margin: vw(45, 480) 0;
+    }
+  }
+
+  &__props {
+    min-width: rem(155px);
+    text-align: left;
+
+    @include mobile {
+      min-width: vw(155, 480);
+    }
+  }
+
+  &__footer {
+    display: flex;
+
+    @include tablet {
+      justify-content: center;
+    }
+  }
+
+  &__price {
+    font-size: rem(36px);
+
+    &::after {
+      content: url(../img/icons/rub.svg);
+      display: inline-block;
+      height: 18px;
+      width: 18px;
+      margin-left: 3px;
+    }
+  }
+
+  &__buy {
+    margin-left: rem(28px);
+
+    @include mobile {
+      margin-left: vw(15, 480);
+    }
+  }
 }
