--- a/course_2/scss/main.scss
+++ b/course_2/scss/main.scss
@@ -1,8 +1,8 @@
 @import 'base/variables';
 @import 'base/base';
 //-------------------- components --------------------
-@import 'components/card';
-@import 'components/dropdown';
+// @import 'block/card';
+@import 'block/dropdown';
 
 //-------------------- section hero --------------------
 @import 'layout/header';
